--- a/www/conf/conf.d/gii.conf
+++ b/www/conf/conf.d/gii.conf
@@ -1,17 +1,15 @@
 server {
 	listen       80;
-	server_name  local.test.com;
-	root   /var/www/html/local.test.com/api/web;
+	server_name  gii.test.com;
+	root   /var/www/html/local.test.com;
 	index  index.html index.htm index.php;
 	
-	include /etc/nginx/conf.d/rewrite/test.conf;
-
 	location / {
 		try_files $uri $uri/ /index.php?$args;
 	}
 
 	location ~ \.php$ {
-		#root           /var/www/html/local.test.com/api/web;
+		#root           /var/www/html/local.test.com;
 		fastcgi_pass   php74:9000;
 		fastcgi_index  index.php;
 		fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
