--- a/www/env.sample
+++ b/www/env.sample
@@ -40,6 +40,30 @@ PHP74_FPM_CONF_FILE=./conf/php7.4/php-fpm.conf
 PHP74_LOG_DIR=./logs/php
 PHP74_EXTENSIONS=pdo_mysql,opcache,redis
 
+#################### PHP7.3 ####################
+PHP73_VERSION=7.3
+PHP73_PORT=9073
+PHP73_PHP_CONF_FILE=./conf/php7.3/php.ini
+PHP73_FPM_CONF_FILE=./conf/php7.3/php-fpm.conf
+PHP73_LOG_DIR=./logs/php
+PHP73_EXTENSIONS=pdo_mysql,opcache,redis
+
+#################### PHP7.2 ####################
+PHP72_VERSION=7.2
+PHP72_PORT=9072
+PHP72_PHP_CONF_FILE=./conf/php7.2/php.ini
+PHP72_FPM_CONF_FILE=./conf/php7.2/php-fpm.conf
+PHP72_LOG_DIR=./logs/php
+PHP72_EXTENSIONS=pdo_mysql,opcache,redis
+
+#################### PHP7.1 ####################
+PHP71_VERSION=7.1
+PHP71_PORT=9071
+PHP71_PHP_CONF_FILE=./conf/php7.1/php.ini
+PHP71_FPM_CONF_FILE=./conf/php7.1/php-fpm.conf
+PHP71_LOG_DIR=./logs/php
+PHP71_EXTENSIONS=pdo_mysql,opcache,redis
+
 #################### PHP5.6 ####################
 PHP56_VERSION=5.6
 PHP56_PORT=9056
@@ -53,6 +77,8 @@ MYSQL_VERSION=8.0.20
 MYSQL_HOST_PORT=3307
 MYSQL_HOSTNAME=127.0.0.1
 MYSQL_ROOT_PASSWORD=123456
+MYSQL_COMMON_USER=william
+MYSQL_COMMON_PASSWORD=123456
 MYSQL_CONF_DIR=./conf/mysql
 MYSQL_DATA_DIR=./database/mysql
 MYSQL_CONF_FILE=./conf/mysql/mysql.cnf
