--- a/www/docker-compose-sample.yml
+++ b/www/docker-compose-sample.yml
@@ -127,7 +127,8 @@ services:
       --collation-server=utf8mb4_general_ci
       --explicit_defaults_for_timestamp=true
       --default-authentication-plugin=mysql_native_password
-      --max_allowed_packet=256M
+      --max_allowed_packet=1024*1024*1024
+      --net_buffer_length=1024*1024*1024
       --sql-mode="STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION,NO_ZERO_DATE,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO"
     privileged: true
     ports:
