--- a/www/env.sample
+++ b/www/env.sample
@@ -5,7 +5,8 @@ SOURCE_DIR=./wwwroot
 
 
 #################### Nginx #####################
-NGINX_VERSION=1.18.0
+#NGINX_VERSION=1.18.0
+NGINX_VERSION=1.19.9.1-3-alpine-fat
 NGINX_HTTP_HOST_PORT=80
 NGINX_HTTPS_HOST_PORT=443
 NGINX_CONFD_DIR=./conf/conf.d
@@ -31,6 +32,11 @@ NGINX_LOG_DIR=./logs/nginx
 # PHP73.sh in extensions.
 #################### end ####################
 
+#################### DEVOPS ####################
+DEVOPS_CONF=./conf/devops
+PROMETHEUS_FILE=./conf/devops/prometheus.yml
+PROMETHEUS_DATA=./prometheus
+GRAFANA_DATA=./grafana/data
 
 #################### PHP7.4 ####################
 PHP74_VERSION=7.4
@@ -47,6 +53,9 @@ PHP73_PHP_CONF_FILE=./conf/php7.3/php.ini
 PHP73_FPM_CONF_FILE=./conf/php7.3/php-fpm.conf
 PHP73_LOG_DIR=./logs/php
 PHP73_EXTENSIONS=pdo_mysql,opcache,redis
+
+#################### Hyperf ####################
+HYPERF_PORT=9099
 
 #################### PHP7.2 ####################
 PHP72_VERSION=7.2
@@ -80,7 +89,7 @@ MYSQL_ROOT_PASSWORD=123456
 MYSQL_COMMON_USER=william
 MYSQL_COMMON_PASSWORD=123456
 MYSQL_CONF_DIR=./conf/mysql
-MYSQL_DATA_DIR=./database/mysql
+MYSQL_DATA_DIR=./database/mysql9
 MYSQL_CONF_FILE=./conf/mysql/mysql.cnf
 
 #################### MONGODB #####################
@@ -127,11 +136,11 @@ RABBITMQ_DEFAULT_USER=william
 RABBITMQ_DEFAULT_PASS=123456
 
 #################### ELASTICSEARCH #####################
-ELASTICSEARCH_VERSION=7.1.1
+ELASTICSEARCH_VERSION=7.9.2
 ELASTICSEARCH_HOSTNAME=kibana
-ELASTICSEARCH_DATA_DIR=./esdata
+ELASTICSEARCH_DATA_DIR=./database/esdata
 ELASTICSEARCH_HOST_PORT_C=9200
-ELASTICSEARCH_HOST_PORT_S=9300
+ELASTICSEARCH_HOST_PORT_S=9200
 
 #################### KIBANA #####################
 KIBANA_VERSION=7.1.1
