--- a/www/env.sample
+++ b/www/env.sample
@@ -32,6 +32,11 @@ NGINX_LOG_DIR=./logs/nginx
 # PHP73.sh in extensions.
 #################### end ####################
 
+#################### MICROENV ####################
+MICROENV_PHP_CONF_FILE=./conf/microenv/php.ini
+MICROENV_PHP_LOG_DIR=./logs/php
+
+
 #################### DEVOPS ####################
 DEVOPS_CONF=./conf/devops
 PROMETHEUS_FILE=./conf/devops/prometheus.yml
